fix: [PL-20844]: review comments: added pre-defined layout spacing

--- a/src/components/InputWithIdentifier/InputWithIdentifier.css
+++ b/src/components/InputWithIdentifier/InputWithIdentifier.css
@@ -16,6 +16,6 @@
   }
 
   .idError {
-    margin-top: -8px;
+    margin-top: calc(-1 * var(--spacing-small));
   }
 }
